prevent line breaks in collection items

--- a/styles/main.css
+++ b/styles/main.css
@@ -77,6 +77,7 @@ body {
 .listing li {
 	width: 5em;
 	overflow: hidden;
+	white-space: nowrap;
 	margin-top: -1px; /* collapse double margins */
 	border: 1px solid #000;
 	padding: 1px 5px;
